{
  "version": 4,
  "terraform_version": "1.5.2",
  "serial": 400,
  "lineage": "be2e1e4a-f8b7-a7dd-1266-4b37ae21d6ce",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "igw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:644691076899:internet-gateway/igw-0d9758912fbd8130c",
            "id": "igw-0d9758912fbd8130c",
            "owner_id": "644691076899",
            "tags": {
              "Name": "MyInternetGateway"
            },
            "tags_all": {
              "Name": "MyInternetGateway"
            },
            "vpc_id": "vpc-0fa22fe89fa3e6f41"
          },
          "dependencies": [
            "aws_vpc.task2_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb",
      "name": "alb",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access_logs": [
              {
                "enabled": false
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:us-east-1:644691076899:loadbalancer/app/appliction-lb/1cc27ef308acd11b",
            "arn_suffix": "app/appliction-lb/1cc27ef308acd11b",
            "desync_mitigation_mode": "defensive",
            "dns_name": "appliction-lb-249523631.us-east-1.elb.amazonaws.com",
            "drop_invalid_header_fields": false,
            "enable_cross_zone_load_balancing": true,
            "enable_deletion_protection": false,
            "enable_http2": true,
            "enable_tls_version_and_cipher_suite_headers": false,
            "enable_waf_fail_open": false,
            "enable_xff_client_port": false,
            "id": "arn:aws:elasticloadbalancing:us-east-1:644691076899:loadbalancer/app/appliction-lb/1cc27ef308acd11b",
            "idle_timeout": 60,
            "internal": false,
            "ip_address_type": "ipv4",
            "load_balancer_type": "application",
            "name": "appliction-lb",
            "preserve_host_header": false,
            "security_groups": [
              "sg-0b7c97bbe0aaf4041"
            ],
            "subnet_mapping": [
              {
                "subnet_id": "subnet-0290d3cf111db08fc"
              },
              {
                "subnet_id": "subnet-03ee579fbcfff28e8"
              }
            ],
            "subnets": [
              "subnet-0290d3cf111db08fc",
              "subnet-03ee579fbcfff28e8"
            ],
            "vpc_id": "vpc-0fa22fe89fa3e6f41",
            "xff_header_processing_mode": "append",
            "zone_id": "Z35SXDOTRQ7X7K"
          },
          "dependencies": [
            "aws_security_group.sg",
            "aws_subnet.subnet1",
            "aws_subnet.subnet2",
            "aws_vpc.task2_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_listener",
      "name": "lb_listener",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "alpn_policy": null,
            "arn": "arn:aws:elasticloadbalancing:us-east-1:644691076899:listener/app/appliction-lb/1cc27ef308acd11b/4d1019d94c846e73",
            "certificate_arn": null,
            "default_action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "arn:aws:elasticloadbalancing:us-east-1:644691076899:targetgroup/alb-target-group/98249433cfb33508",
                "type": "forward"
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-1:644691076899:listener/app/appliction-lb/1cc27ef308acd11b/4d1019d94c846e73",
            "load_balancer_arn": "arn:aws:elasticloadbalancing:us-east-1:644691076899:loadbalancer/app/appliction-lb/1cc27ef308acd11b",
            "port": 80,
            "protocol": "HTTP",
            "ssl_policy": "",
            "tags": null,
            "tags_all": {},
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_lb.alb",
            "aws_lb_target_group.lb_tg",
            "aws_security_group.sg",
            "aws_subnet.subnet1",
            "aws_subnet.subnet2",
            "aws_vpc.task2_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_target_group",
      "name": "lb_tg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:us-east-1:644691076899:targetgroup/alb-target-group/98249433cfb33508",
            "arn_suffix": "targetgroup/alb-target-group/98249433cfb33508",
            "connection_termination": false,
            "deregistration_delay": "300",
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 5,
                "interval": 30,
                "matcher": "200",
                "path": "/",
                "port": "traffic-port",
                "protocol": "HTTP",
                "timeout": 5,
                "unhealthy_threshold": 2
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-1:644691076899:targetgroup/alb-target-group/98249433cfb33508",
            "ip_address_type": "ipv4",
            "lambda_multi_value_headers_enabled": false,
            "load_balancing_algorithm_type": "round_robin",
            "load_balancing_cross_zone_enabled": "use_load_balancer_configuration",
            "name": "alb-target-group",
            "port": 80,
            "protocol": "HTTP",
            "protocol_version": "HTTP1",
            "proxy_protocol_v2": false,
            "slow_start": 0,
            "stickiness": [
              {
                "cookie_duration": 86400,
                "enabled": false,
                "type": "lb_cookie"
              }
            ],
            "target_failover": [
              {
              }
            ],
            "target_type": "ip",
            "vpc_id": "vpc-0fa22fe89fa3e6f41"
          },
          "dependencies": [
            "aws_vpc.task2_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route",
      "name": "my_route",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "igw-0d9758912fbd8130c",
            "id": "r-rtb-0112dee29fe513cdd1080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-0112dee29fe513cdd",
            "state": "active",
            "timeouts": null,
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_internet_gateway.igw",
            "aws_route_table.routetable",
            "aws_vpc.task2_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "routetable",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:644691076899:route-table/rtb-0112dee29fe513cdd",
            "id": "rtb-0112dee29fe513cdd",
            "owner_id": "644691076899",
            "propagating_vgws": [],
            "route": [],
            "tags": {
              "Name": "RouteTable"
            },
            "tags_all": {
              "Name": "RouteTable"
            },
            "timeouts": null,
            "vpc_id": "vpc-0fa22fe89fa3e6f41"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.task2_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "subnet1_association",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-081598c86a75b8490",
            "route_table_id": "rtb-0112dee29fe513cdd",
            "subnet_id": "subnet-0290d3cf111db08fc"
          },
          "dependencies": [
            "aws_route_table.routetable",
            "aws_subnet.subnet1",
            "aws_vpc.task2_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "subnet2_association",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0cf793154192da1fa",
            "route_table_id": "rtb-0112dee29fe513cdd",
            "subnet_id": "subnet-03ee579fbcfff28e8"
          },
          "dependencies": [
            "aws_route_table.routetable",
            "aws_subnet.subnet2",
            "aws_vpc.task2_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:644691076899:security-group/sg-0b7c97bbe0aaf4041",
            "description": "security group for ECS service",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0b7c97bbe0aaf4041",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "security-group",
            "name_prefix": "",
            "owner_id": "644691076899",
            "revoke_rules_on_delete": false,
            "tags": null,
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-0fa22fe89fa3e6f41"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.task2_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "subnet1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:644691076899:subnet/subnet-0290d3cf111db08fc",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az4",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0290d3cf111db08fc",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "644691076899",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "Subnet-1a"
            },
            "tags_all": {
              "Name": "Subnet-1a"
            },
            "vpc_id": "vpc-0fa22fe89fa3e6f41"
          },
          "dependencies": [
            "aws_vpc.task2_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "subnet2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:644691076899:subnet/subnet-03ee579fbcfff28e8",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az6",
            "cidr_block": "10.0.2.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-03ee579fbcfff28e8",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "644691076899",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "Subnet-1b"
            },
            "tags_all": {
              "Name": "Subnet-1b"
            },
            "vpc_id": "vpc-0fa22fe89fa3e6f41"
          },
          "dependencies": [
            "aws_vpc.task2_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "task2_vpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:644691076899:vpc/vpc-0fa22fe89fa3e6f41",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-008e7c8a437c49687",
            "default_route_table_id": "rtb-093c23075d283b9b3",
            "default_security_group_id": "sg-080e0764905644256",
            "dhcp_options_id": "dopt-07ac012688e544fc3",
            "enable_dns_hostnames": false,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-0fa22fe89fa3e6f41",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-093c23075d283b9b3",
            "owner_id": "644691076899",
            "tags": {
              "Name": "Task2-VPC"
            },
            "tags_all": {
              "Name": "Task2-VPC"
            }
          }
        }
      ]
    }
  ]
}